--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
           <h1>Insurance Advisory Servies</h1>
-          <h2>We are proividing advisory service for all Insurance.</h2>
+          <h2>We are proividing advisory service for all types of Insurance.</h2>
           <div class="d-lg-flex">
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
             <!-- <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox btn-watch-video" data-vbtype="video" data-autoplay="true"> Watch Video <i class="icofont-play-alt-2"></i></a> -->
@@ -142,12 +142,12 @@
         <div class="row content">
           <div class="col-lg-6">
             <p>
-              We at Vachhani Insurance, providing best in class insurance advisory services. We provide services for Health Insurance, Group Health Insurance, Vehicle Insurance, and Home / Office Insurance.
+              We at Vachhani Insurance, providing best in class insurance advisory services. We provide services for Health Insurance, Group Health Insurance, Vehicle Insurance, Worker Insurance and Home / Office Insurance.
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Personal and Family Mediclaim </li>
-              <li><i class="ri-check-double-line"></i> Comprehensive and Third Party Vehicle Insurance</li>
-              <li><i class="ri-check-double-line"></i>Personal Accidental Insurance</li>
+              <li><i class="ri-check-double-line"></i> Personal and Family Health Insurance </li>
+              <li><i class="ri-check-double-line"></i> Group Mediclaim for Employess of small or mid scale Businesses </li>
+              <li><i class="ri-check-double-line"></i> Personal Accidental Insurance </li>
             </ul>
           </div>
           <div class="col-lg-6">
@@ -157,9 +157,10 @@
               culpa qui officia deserunt mollit anim id est laborum.
             </p> -->
             <ul>
-            <li><i class="ri-check-double-line"></i> Office / Home Insurance </li>
-              <li><i class="ri-check-double-line"></i> Group Mediclaim Policy for Employess of small or mid scale Businesses </li>
-              <li><i class="ri-check-double-line"></i> </li>
+                <li><i class="ri-check-double-line"></i> Comprehensive and Third Party Vehicle Insurance</li>
+                <li><i class="ri-check-double-line"></i> Office / Home Insurance </li>
+                <li><i class="ri-check-double-line"></i> Worker Insurance </li>
+                <li><i class="ri-check-double-line"></i> Khetivadi Yojana Application </li>
             </ul>
           </div>
         </div>
@@ -757,13 +758,13 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Arsha</h3>
+            <h3>Vachhani Insurance</h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              Dr.Vachhani's clinic <br>
+              Opp. Aram Gruh<br>
+              Jamjodhpur <br><br>
+              <strong>Phone:</strong> +919427444144 <br>
+              <strong>Email:</strong> vachhaniinsurance2019@gmail.com <br>
             </p>
           </div>
 
@@ -771,33 +772,31 @@
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#about">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#about">Services</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> Health Insurance </li>
+              <li><i class="bx bx-chevron-right"></i> Vehicle Insurance </li>
+              <li><i class="bx bx-chevron-right"></i> Worker Insurace </li>
+              <li><i class="bx bx-chevron-right"></i> Khetivadi Application </li>
+              <li><i class="bx bx-chevron-right"></i> Home / Office Insurance </li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Social Networks</h4>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
+            <p>Please connect us for more information</p>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
               <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
+              <!-- <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
             </div>
           </div>
 
@@ -807,15 +806,11 @@
 
     <div class="container footer-bottom clearfix">
       <div class="copyright">
-        &copy; Copyright <strong><span>Arsha</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>2010-2020</span></strong>. All Rights Reserved
       </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+      <!-- <div class="credits">
+        Made In India
+      </div> -->
     </div>
   </footer><!-- End Footer -->
 
